# Depth_Focusing_Backend

./: .env  .gitignore  README.md  build.sh  pyproject.toml  render.yaml  seg_arr_167.npy
config/: settings.py  urls.py
medias/: bluring_img.py  models.py  segmentation.py  serializers.py  urls.py  views.py
medias/depth_model/: evaluate.py  infer.py  model_io.py  utils.py
medias/depth_model/pretrained/: .gitattributes  AdaBins_kitti.pt  AdaBins_nyu.pt
medias/migrations/: 0001_initial.py  0002_photo_depth_file_photo_seg_file.py  0003_photo_labels.py  0004_rename_depth_file_photo_blured_file_and_more.py  0005_alter_photo_segmentation.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_name.py
