[tool.poetry]
name = "kdt-final-django"
version = "0.1.0"
description = ""
authors = ["SonJinHYo <wlsgy95@naver.com>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
django = "~4.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
django-environ = "^0.9.0"
requests = "^2.28.2"
django-cloudflare-images = "^0.4.1"
transformers = "^4.26.0"
scipy = "^1.10.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"
torch = "1.13.1"
pillow = "^9.4.0"
matplotlib = "^3.6.3"
torchvision = "^0.14.1"
wandb = "^0.13.10"
tqdm = "^4.64.1"
opencv-python = "^4.7.0.68"
gdown = "^4.6.3"
sentry-sdk = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
